--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "graceful-fs": "^4.2.4",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jsonfile": "^6.0.1",
+    "log4js": "^6.3.0",
     "markdown-it": "^8.4.2",
     "mongodb": "^3.1.8",
     "morgan": "~1.9.0",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "universalify": "^1.0.0"
   }
 }
